--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,21 @@
             ]
         },
         {
+            "name": "View Docs",
+            "type": "firefox",
+            "request": "launch",
+            "reAttach": true,
+            "reloadOnAttach": true,
+            "file": "${workspaceFolder}/docs/Connect4.html",
+            "preferences": {
+                "security.fileuri.strict_origin_policy": false
+            },
+            "skipFiles": [
+                "${workspaceFolder}/node_modules/**",
+                "<node_internals>/**"
+            ]
+        },
+        {
             "name": "Debug Module",
             "type": "node",
             "request": "launch",
